--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,7 @@
 extends components/template.pug 
 
-//- block seo 
-//-   meta(name="title" content="aidjfoia")
+block seo 
+  meta(name="title" content="aidjfoia")
 
 block content 
   section.first-screen
@@ -137,8 +137,8 @@ block content
         )
         +creatingFigure(
           "img/vf_right.jpg",
-          "Вентильований фасад для «BUBBLES»",
-          "Вентильований фасад для «BUBBLES»",
+          "Вентильований фасад Бізнес Центр ІНВОЛ, Волочиськ",
+          "Вентильований фасад Бізнес Центр ІНВОЛ, Волочиськ",
           "Обшивка приміщення касетами алюмінієвого композиту 4 мм Г 1  по класу негорючості , вмонтоване на алюмінієвій підсистемі, з утепленням мінеральної вати від 50 до 150 мм"
         )
       +buttonLine
