--- a/src/pug/components/template.pug
+++ b/src/pug/components/template.pug
@@ -10,7 +10,7 @@ html(lang="uk")
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
-		//- block seo
+		block seo
 	body 
 		include ../helpers/sprite.pug
 
