--- a/src/pug/light_letters.pug
+++ b/src/pug/light_letters.pug
@@ -22,57 +22,69 @@ block content
           li різний шрифт
         .examples 
           h3.sec-subtitle 
-          .examples-line.fig-list 
+        .fig-slider 
+          .examples-line
+            .arr-left 
+            .arr-right 
             - 
               var items = [
                 {
-                  src: "img/ps_chameleon.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/569BD883-D7C5-4895-BBD3-5A3B9EA9D9F1.jpg", 
+                  title: ""
                 },
                 {
-                  src: "img/ps_marketok.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/B7EBE056-1519-45B7-919F-6461434C352A.jpg", 
+                  title: ""
                 },
                 {
-                  src: "img/ps_medtehnika.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/BUBBLES.jpg", 
+                  title: ""
                 },
                 {
-                  src: "img/ps_milamed.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/IMG_0207.jpg", 
+                  title: ""
                 },
                 {
-                  src: "img/ps_medmagazin.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/IMG_0210.jpg", 
+                  title: ""
                 },
                 {
-                  src: "img/ps_technoprostir.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/IMG_0630.JPG", 
+                  title: ""
                 },
                 {
-                  src: "img/ps_technoprostir.jpg", 
-                  title: "Вивіска для компанії “chameleon”", 
-                  price: "???", 
-                  height: "30 СМ"
+                  src: "img/pages/IMG_1559.JPG", 
+                  title: ""
                 },
+                {
+                  src: "img/pages/IMG_3668.JPG", 
+                  title: ""
+                },
+                {
+                  src: "img/pages/IMG_6963.JPG", 
+                  title: ""
+                },
+                {
+                  src: "img/pages/IMG_9594.JPG", 
+                  title: ""
+                },
+                {
+                  src: "img/pages/photo_2021-06-10_15-43-45.jpg", 
+                  title: ""
+                },
+                {
+                  src: "img/pages/IMG_9864.JPG", 
+                  title: ""
+                },
+                {
+                  src: "img/pages/IMG_0857.jpg", 
+                  title: ""
+                }                  
               ]
             each i in items 
-              +creatingFigure(
+              +pageFigure(
                 i.src,
-                i.title,
-                i.title,
-                i.price,
-                i.height
+                i.title
               )
+          .button-line
+              +button('g', 'index.html#contacts', 'Замовити')
