Open doubled page in needed screen

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -57,7 +57,7 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title.anim.animation-fade На даний час об’ємні букви (літери) є одним з найефективніших видів зовнішньої реклами в багатьох сферах бізнесу.
       p.sec-desc.anim.animation-fade Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентації, виставки) фотосесій.
-      +buttonLine
+      +buttonLine('light_letters.html')
   .creating-screen(data-block-name="ls")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
@@ -81,7 +81,7 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title ОБ’ЄМНІ ЛОГОТИПИ КОМПАНІЙ.ВИВІСКА З ОБ’ЄМНИМИ ЛІТЕРАМИ.
       p.sec-desc Вивіски, лайтбокси з об'ємними літерами – поширений вид візуальних знаків, що застосовуються, як зовні, так і всередині приміщення.
-      +buttonLine
+      +buttonLine('panel_sign.html#sign')
   .creating-screen(data-block-name="ns")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
@@ -105,7 +105,7 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title СКЛЯНА ТРУБКА З ІНЕРТНИМ ГАЗОМ.
       p.sec-desc Характерною рисою є скляна трубка, наповнена газом - неоном.Виготовляють неонові вивіски по засобу нагріву трубки та закачування газу. Після застосування газу - подається висока напруга і трубка випромінює світло. Індивідуальний колірний діапазон досягається внаслідок використання різних і іноді декількох інертних газів.
-      +buttonLine
+      +buttonLine('panel_sign.html#neon_sign')
   .creating-screen(data-block-name="vv")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
