--- a/src/pug/helpers/mixins.pug
+++ b/src/pug/helpers/mixins.pug
@@ -30,7 +30,7 @@ mixin button(type, href='#', content)
 mixin buttonLine(thref="#")
   .button-line 
     a.g-button.button.anim.animation-left(href='#contacts') замовити
-    //- a.t-button.button.anim.animation-right(href=thref) детальніше
+    a.t-button.button.anim.animation-right(href=thref) детальніше
 
 mixin preference(title, desc1, desc2)
   .preference
