--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -5,9 +5,9 @@ block content
     section 
       img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon")
       .page-switches.flex-sb 
-        a.choosen-switch(href="#") вивіски
-        a(href="#") неонові вивіски 
-      .page-content.choosen-page 
+        a.choosen-switch(href="#" data-name="sign") вивіски
+        a(href="#" data-name="neon_sign") неонові вивіски 
+      .page-content.choosen-page(data-name='sign') 
         h2.sec-title щитова вивіска, рекламний щит за 260 грн
         p.sec-desc Щитова вивіска - оптимальний спосіб інформувати про себе. Така вивіска, рекламний щит є не дорога як у виробництві, так і в обслуговувані. Основними перевагами такого виду зовнішньої реклами є її невисока ціна виготовлення, простий монтаж, транспортування, невибагливе обслуговування. Щитову вивіску, рекламний щит, також можна доповнити зовнішнім підсвічуванням. Найбільше така вивіска застосовується для невеликих магазинів, кіосків, кав'ярень, також як вказівник чи рекламно-інформаційний щит.
         h3.sec-subtitle Ми пропонуємо декілька варіантів виготовлення щитової реклами з застосуванням різних матеріалів:
@@ -62,7 +62,7 @@ block content
                 )
             .button-line
               +button('g', 'index.html#contacts', 'Замовити')
-      .page-content
+      .page-content(data-name='neon_sign') 
         h2.sec-title скляна трубка з інертним газом
         p.sec-desc Характерною рисою є скляна трубка, наповнена газом - неоном.Виготовляють неонові вивіски по засобу нагріву трубки та закачування газу. Після застосування газу - подається висока напруга і трубка випромінює світло. Індивідуальний колірний діапазон досягається внаслідок використання різних і іноді декількох інертних газів.
         h3.sec-subtitle гнучкий світловий неон
