add changing banner on additional page with switching

--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -3,7 +3,8 @@ extends components/template.pug
 block content 
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon")
+      img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon" data-name="sign")
+      img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign")
       .page-switches.flex-sb 
         a.choosen-switch(href="#" data-name="sign") вивіски
         a(href="#" data-name="neon_sign") неонові вивіски 
