--- a/src/pug/policy.pug
+++ b/src/pug/policy.pug
@@ -6,12 +6,92 @@ block content
       h1.sec-title ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ ПЕРСОНАЛЬНИХ ДАНИХ
       div 
         <p><strong>користувачів сайту агенції з розробки зовнішньої реклами “Реклама Поділля”</strong></p><p></p><p>Наша адреса сайту:<a style="background-color: #ffffff;" href="https://www.reclama-podilla.km.ua." target="_blank" rel="noopener">&nbsp;</a><span style="background-color: #ffffff;"><a href="https://www.reclama-podilla.km.ua.">https://www.reclama-podilla.km.ua</a></span><a style="background-color: #ffffff;" href="https://www.reclama-podilla.km.ua." target="_blank" rel="noopener">.</a></p><p>Ваша конфіденційність є важливою для&nbsp;<strong>агенції з розробки зовнішньої реклами “Реклама Поділля”</strong>. В зв’язку з цим спеціально для своїх користувачів нами була розроблена дана Політика конфіденційності персональних даних (далі – Політика конфіденційності).</p><p>Дана Політика конфіденційності діє відносно всієї інформації, яку сайт&nbsp;<strong>ПП</strong>&nbsp;<strong>“Реклама Поділля”</strong>&nbsp;(далі – Сайт), що розміщений на доменному імені&nbsp;<a href="https://www.reclama-podilla.km.ua." target="_blank">https://www.reclama-podilla.km.ua.</a><strong>&nbsp;</strong>, може отримати про Користувача під час використання Сайту, програм і продуктів Сайту.</p>
-      h2.sec-title ЯКІ ОСОБИСТІ ДАНІ МИ ЗБИРАЄМО ТА ЧОМУ МИ ЇХ ЗБИРАЄМО?
-      b.sec-subtitle Коментарі
-      p Коли відвідувачі залишають коментарі на сайті, ми збираємо дані, що відображаються у формі коментарів, а також IP-адреси відвідувачів та рядку агента-браузера користувача, щоб допомогти виявити спам.
-      p Анонімний рядок, створений за вашою адресою електронної пошти (також називається хеш), може бути наданий службі Gravatar, щоб дізнатись, чи ви його використовуєте. Політика конфіденційності служби Gravatar доступна тут: https://automattic.com/privacy/. Після схвалення вашого коментаря, ваше зображення профілю буде видно для громадськості в контексті вашого коментарю.
-      b.sec-subtitle Медіафайли
-      p Якщо ви завантажуєте зображення на сайт, вам слід уникати завантаження зображень із вбудованими даними про місцезнаходження (EXIF GPS). Відвідувачі сайту можуть завантажувати та витягувати будь-які дані про місцезнаходження із зображень на сайті.
-      b.sec-subtitle Контактні Форми
-      b.sec-subtitle Cookies
+      b.sec-title ЯКІ ОСОБИСТІ ДАНІ МИ ЗБИРАЄМО ТА ЧОМУ МИ ЇХ ЗБИРАЄМО?
+      div
+        b.sec-subtitle Коментарі
+        p Коли відвідувачі залишають коментарі на сайті, ми збираємо дані, що відображаються у формі коментарів, а також IP-адреси відвідувачів та рядку агента-браузера користувача, щоб допомогти виявити спам.
+        p Анонімний рядок, створений за вашою адресою електронної пошти (також називається хеш), може бути наданий службі Gravatar, щоб дізнатись, чи ви його використовуєте. Політика конфіденційності служби Gravatar доступна тут: https://automattic.com/privacy/. Після схвалення вашого коментаря, ваше зображення профілю буде видно для громадськості в контексті вашого коментарю.
+      div
+        b.sec-subtitle Медіафайли
+        p Якщо ви завантажуєте зображення на сайт, вам слід уникати завантаження зображень із вбудованими даними про місцезнаходження (EXIF GPS). Відвідувачі сайту можуть завантажувати та витягувати будь-які дані про місцезнаходження із зображень на сайті.
+      div
+        b.sec-subtitle Контактні Форми
+      div
+        b.sec-subtitle Cookies
+        p Якщо ви залишаєте коментар на нашому сайті, ви можете ввімкнути збереження свого імені, електронної адреси та сайту в файлах cookie. Це для вашої зручності, так що вам не потрібно буде повторно заповнювати ваші дані, коли ви залишатимете наступний коментар. Ці файли cookie зберігатимуться 1 рік.
+        p Якщо у вас є обліковий запис на сайті і ви ввійдете в нього, ми встановимо тимчасовий cookie для визначення підтримки cookies вашим браузером, cookie не містить ніякої особистої інформації і віддаляється при закритті вашого браузера.
+        p Коли ви ввійдете в систему, ми також встановимо декілька файлів cookie, щоб зберегти інформацію про ваш логін та налаштування екрана. Cookie-файли для входу зберігаються 2 дні, а файли cookie-файлів налаштувань екрану – 1 рік. Якщо ви виберете “Запам’ятати мене”, ваш логін буде зберігатися протягом 2 тижнів. Якщо ви вийдете зі свого облікового запису, файли cookie логіну будуть видалені.
+        p Якщо ви редагуєте або публікуєте статтю, у вашому веб-переглядачі буде збережений додатковий файл cookie. Цей файл cookie не містить особистих даних і просто вказує ідентифікатор статті, яку ви щойно редагували. Його термін дії закінчується через 1 день.
+      div 
+        b.sec-subtitle Вбудований Вміст З Інших Веб-Сайтів
+        p Статті на цьому сайті можуть містити вбудований вміст (наприклад: відео, зображення, статті тощо). Вбудований вміст з інших сайтів веде себе так само, як би користувач відвідав інший сайт.
+        p Ці сайти можуть збирати дані про вас, використовувати файли cookie, вбудовані додатки відстеження третіх сторін та стежити за вашою взаємодією з цим вбудованим вмістом. Зокрема відстежувати взаємодію з вбудованим вмістом, якщо у вас є обліковий запис і ви увійшли на цей сайт.
+      div 
+        b.sec-subtitle Аналітика
+      div 
+        b.sec-subtitle Як Довго Ми Зберігаємо Ваші Дані
+        p Якщо ви залишаєте коментар, він та його метадані зберігаються протягом невизначеного терміну. Таким чином, ми можемо автоматично визначати та затверджувати кожен наступний коментар замість того, щоб тримати їх у черзі на модерації.
+        p Для користувачів, які реєструються на нашому сайті (якщо такі є), ми зберігаємо надану ними персональну інформацію у їхньому профілі користувача. Всі користувачі можуть переглядати, редагувати або видаляти свої особисті дані в будь-який час (за винятком того, що вони не можуть змінити своє ім’я користувача). Адміністратори сайту також можуть переглядати та редагувати цю інформацію.
+      div 
+        b.sec-subtitle Які Права Ви Маєте Відносно Своїх Даних
+        p Якщо у вас є обліковий запис на цьому сайті або ви залишили коментарі, ви можете подати запит на отримання експортованого файлу особистих даних які ми зберігаємо про вас, включаючи всі дані, які ви надали нам. Ви також можете вимагати, щоб ми стерли будь-які особисті дані, які ми маємо щодо вас. Це не включає будь-які дані, які ми зобов’язані зберігати в адміністративних, правових та цілях безпеки.
+      div 
+        b.sec-subtitle Куди Ми Відправляємо Ваші Данні
+        p Коментарі відвідувачів можуть бути перевірені за допомогою служби автоматичного виявлення спаму.
+      b.sec-title ЗАГАЛЬНІ ПОЛОЖЕННЯ ПОЛІТИКИ КОНФІДЕНЦІЙНОСТІ ПЕРСОНАЛЬНИХ ДАНИХ САЙТУ "РЕКЛАМА ПОДІЛЛЯ".
+      div 
+        b.sec-subtitle 1. ЗАГАЛЬНІ ПОЛОЖЕННЯ 
+        p 1.1. Використання Користувачем Сайту підтверджує надання згоди з цією Політикою конфіденційності та умовами обробки персональних даних Користувача.
+        p 1.2. У разі незгоди з умовами Політики конфіденційності Користувач повинен припинити використання Сайту.
+        p 1.3. Дана Політика конфіденційності застосовується лише до Сайту  «<strong>РЕКЛАМА ПОДІЛЛЯ</strong>». Адміністрація сайту не контролює і не несе відповідальність за сайти третіх осіб, на які Користувач може перейти по посиланнях, що є доступними на Сайті.
+      div 
+        b.sec-subtitle 2. ПРЕДМЕТ ПОЛІТИКИ КОНФІДЕНЦІЙНОСТІ
+        p 2.1. Дана Політика конфіденційності встановлює зобов’язання Адміністрації сайту щодо нерозголошення та забезпечення режиму захисту конфіденційності персональних даних, які Користувач надає за запитом Адміністрації сайту на Сайті  «<strong>РЕКЛАМА ПОДІЛЛЯ</strong>» під час заповнення інформаційних форм.
+        p 2.2. Персональні дані, що дозволені до обробки в рамках цієї Політики конфіденційності, надаються Користувачем шляхом заповнення форми зворотного зв’язку на Сайті і включають в себе наступну інформацію:
+        p 2.2.1. прізвище, ім’я Користувача;
+        p 2.2.2. контактний телефон Користувача;
+        p 2.2.3. адреса електронної пошти Користувача.
+      div 
+        b.sec-subtitle 3. МЕТА ЗБОРУ ПЕРСОНАЛЬНОЇ ІНФОРМАЦІЇ КОРИСТУВАЧА
+        p 3.1. Персональні дані Користувача Адміністрація сайту може використовувати в наступних цілях:
+        p 3.1.1. Ідентифікація Користувача для взаємодії з Адміністрацією сайту з питань діяльності.
+        p 3.1.2. Встановлення з Користувачем зворотного зв’язку, включаючи напрямок повідомлень, запитів, що стосуються використання Сайту, надання послуг, обробка запитів і заявок від Користувача.
+        p 3.1.3. Надання Користувачеві ефективної клієнтської і технічної підтримки при виникненні проблем, що пов’язані з використанням Сайту.
+      div 
+        b.sec-subtitle 4. СПОСОБИ І ТЕРМІНИ ОБРОБКИ ПЕРСОНАЛЬНОЇ ІНФОРМАЦІЇ
+        p 4.1. Обробка персональних даних Користувача здійснюється без обмеження терміну, будь-яким законним способом, в тому числі, в інформаційних системах персональних даних з використанням засобів автоматизації або без використання таких засобів.
+        p 4.2. Сайт може використовувати «cookies», які мають невеликі текстові файли, розміщені на комп’ютері або пристрої Користувача. В роботі Сайт також використовує піксельні теги, веб-маяки і інші подібні технології. Такі сервіси використовуються, щоб допомогти проаналізувати веб-потік сторінок, налаштувати послуги Сайту, оптимізувати призначені для користувача інтерфейси, виміряти рекламну ефективність. За допомогою цих пристроїв Сайт отримує наступні дані: ідентифікацію діючих інтернет провайдерів, IP-адреса користувача, тип браузера і операційної системи, дата і час доступу до Ресурсу, адреса веб-сайту (якщо такий є), через який Користувач пов’язаний з Сайтом та іншу подібну інформацію, що пов’язана з трафіком.
+        p 4.3. При втраті або розголошення персональних даних Адміністрація сайту інформує Користувача про втрату або розголошення персональних даних.
+        p 4.4. Адміністрація сайту застосовує необхідні організаційні і технічні заходи для захисту персональної інформації Користувача від неправомірного або випадкового доступу, знищення, перекручення, блокування, копіювання, поширення, а також від інших неправомірних дій третіх осіб.
+        p 4.5. Адміністрація сайту разом з Користувачем застосовує всі необхідні заходи щодо запобігання виникнення збитків або інших негативних наслідків, викликаних втратою або розголошенням персональних даних Користувача.
+      div 
+        b.sec-subtitle 5. ЗОБОВ’ЯЗАННЯ СТОРІН
+        p 5.1. Користувач зобов’язаний:
+        p 5.1.1. Надати інформацію про персональні дані, необхідну для користування Сайтом.
+        p 5.2. Адміністрація сайту зобов’язується:
+        p 5.2.1. Використовувати отриману інформацію виключно для цілей, які зазначені у розділі 3 цієї <b>Політики конфіденційності</b>.
+        p 5.2.2. Забезпечити зберігання конфіденційної інформації в таємниці, не розголошувати без попередньої письмової згоди Користувача, а також не здійснювати продаж, обмін, опублікування або розголошення іншими можливими засобами переданих персональних даних Користувача.
+        p 5.2.3. Застосовувати заходи обережності для захисту конфіденційності персональних даних Користувача згідно з порядком, який зазвичай використовується для захисту такого роду інформації в існуючому діловому обороті.
+        p 5.2.4. Здійснити блокування персональних даних, що відносяться до відповідного Користувача, з моменту звернення або запиту Користувача або його законного представника чи уповноваженого органу з захисту прав суб’єктів персональних даних на період перевірки, у випадку виявлення недостовірних персональних даних або неправомірних дій.істрація сайту разом з Користувачем застосовує всі необхідні заходи щодо запобігання виникнення збитків або інших негативних наслідків, викликаних втратою або розголошенням персональних даних Користувача.
+      div 
+        b.sec-subtitle 6. ВІДПОВІДАЛЬНІСТЬ СТОРІН
+        p 6.1. Адміністрація сайту за невиконання своїх зобов’язань несе відповідальність за збитки, понесені Користувачем у зв’язку з неправомірним використанням його персональних даних, відповідно до законодавства України.
+        p 6.2. Адміністрація сайту не несе відповідальність за втрату або розголошення конфіденційної інформації, якщо дана конфіденційна інформація:
+        p 6.2.1. Стала публічним надбанням до її втрати або розголошення.
+        p 6.2.2. Була отримана від третьої сторони до моменту її отримання Адміністрацією сайту.
+        p 6.2.3. Була розголошена за згодою Користувача.
+        p 6.2.4. Була надана органам виконавчої влади, контролюючим і правоохоронним органам в порядку, передбаченому чинним законодавством, на підставі належним чином оформленої вимоги.
+      div 
+        b.sec-subtitle 7. ВИРІШЕННЯ СПОРІВ
+        p 7.1. Досудове врегулювання спорів, що виникають між Користувачем і Адміністра-цією сайту, є обов’язковим.
+        p 7.2. Одержувач претензії протягом 30 календарних днів з дня отримання претензії письмово повідомляє заявника претензії про результати розгляду даної претензії.
+        p 7.3. При не досягненні угоди між сторонами спір розглядається в судовому порядку відповідно до чинного законодавства України.
+        p 7.4. До цієї Політики конфіденційності та відносин між Користувачем і Адміністра-цією сайту застосовується чинне законодавство України.
+      div 
+        b.sec-subtitle 8. ДОДАТКОВІ УМОВИ
+        p 8.1. Адміністрація сайту має право вносити зміни в дану Політику конфіденційності без згоди Користувача.
+        p 8.2. Нова Політика конфіденційності вступає в силу з моменту її розміщення на Сайті, якщо інше не передбачено новою редакцією Політики конфіденційності.
+        p 8.3. Про всі пропозиції або питання, що стосуються даної Політики конфіденційності, необхідно повідомляти Адміністрації сайту. 
+       
+            
 
