--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1148,7 +1148,7 @@ section.policy-page
     text-align: center
     margin-bottom: 25px
   .sec-subtitle 
-    display: inline-block
+    display: block
     margin: 20px 0
   div 
     margin-bottom: 30px
