--- a/src/pug/components/template.pug
+++ b/src/pug/components/template.pug
@@ -4,7 +4,6 @@ html(lang="uk")
 		meta(charset="UTF-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		title Реклама Поділля. Розробка Та Виготовлення Зовнішньої Реклами
 		link(rel="stylesheet", href="css/styles.css")
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +11,47 @@ html(lang="uk")
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+	block seo
+		meta(name="description", content="Вивіска світлова, латбокс, об'ємні літери, банери. Зовнішня реклама вивіски лайтбокс в Хмельницькому замовляють в агенції 'РЕКЛАМА ПОДІЛЛЯ'.")
+		meta(name="keywords", content="зовнішня реклама, розробка та виготовлення зовнішньої реклами, монтаж конструкцій зовнішньої реклами, замовити розробку вивісок")
+		meta(name="author", content="Реклама Поділля")
+		meta(name="publisher", content="Реклама Поділля")
+		meta(name="robots", content="index follow")
+		title Реклама Поділля. Розробка Та Виготовлення Зовнішньої Реклами
+		link(rel="canonical", href="https://reklama-podillya.com.ua/")
+    	meta(property="og:title" content="Реклама Поділля - розробка, виготовлення зовнішньої реклами")
+   		meta(property="og:description" content="Вивіски, лайтбокс, світлові літери. Зовнішня реклама, виготовлення розробка монтаж - швидко якісно.")
+    	meta(property="og:image" content="https://reklama-podillya.com.ua/img/logo.svg")
+    	meta(property="og:url" content="https://reklama-podillya.com.ua")
+   		meta(property="og:type" content="website")
+		<script type="application/ld+json">
+		[
+			{
+			"@context": "http://schema.org/",
+			"@type": "LocalBusiness",
+			"name": "РЕКЛАМА ПОДІЛЛЯ",
+			"telephone": "067 904 77 38"
+			},
+			{
+			"@context": "http://schema.org/",
+			"@type": "LocalBusiness",
+			"name": "реклама Поділля",
+			"image": [
+				"https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
+				"https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
+				"https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
+				"https://reklama-podillya.com.ua/img/vf_veloman.jpg",
+				"https://reklama-podillya.com.ua/img/vf_center.jpg",
+				"https://reklama-podillya.com.ua/img/vf_right.jpg"
+			],
+			"telephone": "067 904 77 38",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
+			}
+			}
+		]
+		</script>
 	body 
 		include ../helpers/sprite.pug
 
