--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -21,7 +21,7 @@ section.creating.anim-parent
         a(href="#") обʼємні козирки
       span.g-line
       li(data-btn-name="eg")
-        //- entrance group
+        //- enterance group
         a(href="#") вхідна група
       span.g-line
       li(data-btn-name="sc")
@@ -129,7 +129,7 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title ОБ’ЄМНІ КОЗИРКИ РІЗНИХ КОНФІГУРАЦІЙ.
       p.sec-desc На даний час об’ємні козирки є одним з основних елементів комплексу фасадних конструкцій при оформлені будь-якого комерційного приміщення. Також може використовуватись як окремий елемент вхідної групи.
-      +buttonLine
+      +buttonLine('volumetrical_visors.html')
   .creating-screen(data-block-name="eg")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
@@ -153,7 +153,7 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title ВХІДНА ГРУПА. КОМПЛЕКС ЕЛЕМЕНТІВ ЗОВНІШНЬОЇ РЕКЛАМИ.
       p.sec-desc Вхідна група — це комплекс з елементів зовнішньої реклами (світових вивісок, об’ємних та світлових літер, лайтбоксі, чи звичайних вивісок), вітрин поклеєні плівкою, підсвітки, та обшивка фасаду алюмінієвими панелями та іншими якісними матеріалами.
-      +buttonLine
+      +buttonLine('enterance_group.html')
   .creating-screen(data-block-name="sc")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
@@ -177,7 +177,7 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title ПОКЛЕЙКА ВІТРИН.
       p.sec-desc Вартість наклеювання складає 350 грн за метр квадратний. Для більш детальною інформацією зверніться до наших менеджерів.Консультації, заміри, розрахунки безкоштовні.Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документи.
-      +buttonLine
+      +buttonLine('showcase.html')
   .creating-screen(data-block-name="pl")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
@@ -201,4 +201,4 @@ section.creating.anim-parent
     article.screen-desc 
       h2.sec-title ШТЕНДЕРИ, ІНФОРМАЦІЙНІ ЩИТИ, ВУЛИЧНІ ТАБЛИЧКИ, БАНЕРИ
       p.sec-desc Штендер – це компактна, мобільна, переносна рекламна конструкція, яка користується великою популярністю в людних місцях. Частіше штендери ставлять біля дороги чи тротуару, недалеко від рекламованого об’єкта, зазвичай з вказівною стрілочкою.
-      +buttonLine
+      +buttonLine('pillars.html')
