--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ block content
     h1 розробка та виготовлення зовнішньої реклами
     ul.adv-list
       li 
-        a(href="panel_sign.html") вивіски
+        a(href="panel_sign.html#sign") вивіски
       li 
         a(href="#") лайтбокси
       li 
@@ -141,7 +141,7 @@ block content
           "Вентильований фасад Бізнес Центр ІНВОЛ, Волочиськ",
           "Обшивка приміщення касетами алюмінієвого композиту 4 мм Г 1  по класу негорючості , вмонтоване на алюмінієвій підсистемі, з утепленням мінеральної вати від 50 до 150 мм"
         )
-      +buttonLine
+      +buttonLine("facades.html")
     a#prices-table
     section.prices.anim-parent 
       h2.sec-title.anim.animation-fade Ціни на виготовлення вивісок 
