add links in first screen

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,11 +15,11 @@ block content
       li 
         a(href="panel_sign.html#sign") вивіски
       li 
-        a(href="#") лайтбокси
+        a(href="light_letters.pug") лайтбокси
       li 
-        a(href="#") літери
+        a(href="enterance_group.html") вхідні групи
       li 
-        a(href="#") банери
+        a(href="pillars.html") банери
     +button('g', '#contacts', 'замовити')
   .wrapper.main-page
     a#about-us
