--- a/src/pug/light_letters.pug
+++ b/src/pug/light_letters.pug
@@ -1,5 +1,47 @@
 extends components/template.pug 
 
+block seo
+  meta(name="description", content="")
+	meta(name="keywords", content="")
+	meta(name="author", content="Реклама Поділля")
+	meta(name="publisher", content="Реклама Поділля")
+	meta(name="robots", content="index follow")
+  meta(property="og:title" content="")
+  meta(property="og:description" content="")
+  meta(property="og:image" content="https://reklama-podillya.com.ua/img/logo.svg")
+  meta(property="og:url" content="https://reklama-podillya.com.ua")
+  meta(property="og:type" content="website")
+	title 
+	link(rel="canonical", href="https://reklama-podillya.com.ua/")
+	<script type="application/ld+json">
+		[
+			{
+			"@context": "http://schema.org/",
+			"@type": "LocalBusiness",
+			"name": "РЕКЛАМА ПОДІЛЛЯ",
+			"telephone": "067 904 77 38"
+			},
+			{
+			"@context": "http://schema.org/",
+			"@type": "LocalBusiness",
+			"name": "реклама Поділля",
+			"image": [
+				"https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
+				"https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
+				"https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
+				"https://reklama-podillya.com.ua/img/vf_veloman.jpg",
+				"https://reklama-podillya.com.ua/img/vf_center.jpg",
+				"https://reklama-podillya.com.ua/img/vf_right.jpg"
+			],
+			"telephone": "067 904 77 38",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
+			}
+			}
+		]
+	</script>
+
 block content 
   .wrapper.panel_sign-page.additional-page
     section 
